--- a/handling-asynchronous-data-flow-in-flux/index.html
+++ b/handling-asynchronous-data-flow-in-flux/index.html
@@ -197,7 +197,7 @@ module.exports = actions;
 
 <p>And that is pretty much it. I have seen examples where different actions can be dispatched as a result of different responses from the server. I think this is a really nice approach and as this is an overly simplified implementation I did not include this. This can be useful for when you want to send data down to display a loading screen or some type of success/error messages etc.</p>
 
-<p>I hope you found this post useful. I tried to keep it as simple as possible for the purpose of this post. The full code can be found on my <a href="https://github.com/mjw56/react-components">Github</a>. If you have any questions or comments please feel free to reach out to me on <a href="https://twitter.com/subr0utine">Twitter</a> or in the comments section below. Cheers!</p>
+<p>I hope you found this post useful. I tried to keep it as simple as possible for the purpose of this post. The full code can be found on my <a href="https://github.com/mjw56/react-components">Github</a>. If you have any questions or comments please feel free to reach out to me on <a href="https://twitter.com/mjw56_">Twitter</a> or in the comments section below. Cheers!</p>
 		</div>
 	
 		<ol class="share_digitus">
@@ -268,7 +268,7 @@ module.exports = actions;
 
         <li>
             <span class="tooltip_digitus">Twitter</span>
-            <a href="https://twitter.com/subr0utine">
+            <a href="https://twitter.com/mjw56_">
                 <span class="fa fa-stack">
                     <i class="fa fa-stop fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
