--- a/welcome-to-ghost/index.html
+++ b/welcome-to-ghost/index.html
@@ -220,7 +220,7 @@
   <footer class="site-footer social-links">
     <div id="social-links">
       <!-- TWITTER -->
-      <a href="https://twitter.com/subr0utine" target="_blank">
+      <a href="https://twitter.com/mjw56_" target="_blank">
         <i class="fa fa-twitter fa-lg"></i>
         Twitter
       </a>
