--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </a>
     </h1>
     <p class="blogdescription_digitus">
-        
-    </p>	
+
+    </p>
 </header>
 
 <main class="wrapper_digitus" role="main">
@@ -165,7 +165,7 @@
 
         <li>
             <span class="tooltip_digitus">Twitter</span>
-            <a href="https://twitter.com/subr0utine">
+            <a href="https://twitter.com/mjw56_">
                 <span class="fa fa-stack">
                     <i class="fa fa-stop fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
