--- a/index.html
+++ b/index.html
@@ -51,13 +51,64 @@
         </a>
     </h1>
     <p class="blogdescription_digitus">
-
-    </p>
+        
+    </p>	
 </header>
 
 <main class="wrapper_digitus" role="main">
 
     <h3>stuff</h3>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
+                <h2><a href="writing-your-first-react-app/index.html" rel="bookmark">
+				    Writing Your First React App
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        2 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
+                <h2><a href="the-developers-guide-to-the-angular-typescript-galaxy/index.html" rel="bookmark">
+				    The Developers Guide to the Angular + TypeScript Galaxy
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        4 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
+                <h2><a href="writing-code-on-github-for-30-straight-days/index.html" rel="bookmark">
+				    Progress Not Perfection
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        17 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
 
 
 		<article class="article_digitus">
@@ -70,7 +121,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        2 minutes ago
+                        6 months ago
                     </time></p>
                 </span>
            </span>
@@ -87,58 +138,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        20 hours ago
-                    </time></p>
-                </span>
-           </span>
-		</article>
-
-
-		<article class="article_digitus">
-
-            <span class="posttitle_digitus">
-                <h2><a href="react-native-flux-music-part-ii/index.html" rel="bookmark">
-				    React Native, Flux, &amp; Music :: Part II
-                    </a>
-                </h2>
-                <span class="tooltip_digitus">
-                    <p><i class="fa fa-calendar"></i>
-                    <time>
-                        2 days ago
-                    </time></p>
-                </span>
-           </span>
-		</article>
-
-
-		<article class="article_digitus">
-
-            <span class="posttitle_digitus">
-                <h2><a href="react-native-flux-and-music/index.html" rel="bookmark">
-				    React Native, Flux, &amp; Music :: Part I
-                    </a>
-                </h2>
-                <span class="tooltip_digitus">
-                    <p><i class="fa fa-calendar"></i>
-                    <time>
-                        7 days ago
-                    </time></p>
-                </span>
-           </span>
-		</article>
-
-
-		<article class="article_digitus">
-
-            <span class="posttitle_digitus">
-                <h2><a href="a-simple-comments-app-with-om/index.html" rel="bookmark">
-				    Building UI Components with Om, ClojureScript, and React
-                    </a>
-                </h2>
-                <span class="tooltip_digitus">
-                    <p><i class="fa fa-calendar"></i>
-                    <time>
-                        5 months ago
+                        6 months ago
                     </time></p>
                 </span>
            </span>
@@ -165,7 +165,7 @@
 
         <li>
             <span class="tooltip_digitus">Twitter</span>
-            <a href="https://twitter.com/mjw56_">
+            <a href="https://twitter.com/subr0utine">
                 <span class="fa fa-stack">
                     <i class="fa fa-stop fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
