--- a/react-native-flux-music-part-ii/index.html
+++ b/react-native-flux-music-part-ii/index.html
@@ -297,7 +297,7 @@
 
         <li>
             <span class="tooltip_digitus">Twitter</span>
-            <a href="https://twitter.com/mjw56_">
+            <a href="https://twitter.com/subr0utine">
                 <span class="fa fa-stack">
                     <i class="fa fa-stop fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
