--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        a few seconds ago
+                        8 days ago
                     </time></p>
                 </span>
            </span>
@@ -87,7 +87,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        39 minutes ago
+                        8 days ago
                     </time></p>
                 </span>
            </span>
@@ -104,7 +104,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        42 minutes ago
+                        8 days ago
                     </time></p>
                 </span>
            </span>
@@ -121,7 +121,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        an hour ago
+                        8 days ago
                     </time></p>
                 </span>
            </span>
@@ -138,7 +138,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        6 months ago
+                        7 months ago
                     </time></p>
                 </span>
            </span>
