add git rebase post

--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
 		<article class="article_digitus">
 
             <span class="posttitle_digitus">
+                <h2><a href="git-branching-and-rebase/index.html" rel="bookmark">
+				    Git branching and rebase
+                    </a>
+                </h2>
+                <span class="tooltip_digitus">
+                    <p><i class="fa fa-calendar"></i>
+                    <time>
+                        7 minutes ago
+                    </time></p>
+                </span>
+           </span>
+		</article>
+
+
+		<article class="article_digitus">
+
+            <span class="posttitle_digitus">
                 <h2><a href="the-path-to-javascript-ninjutsu-pt-i/index.html" rel="bookmark">
 				    The Path to JavaScript Ninjutsu Pt I
                     </a>
@@ -70,7 +87,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        8 days ago
+                        4 months ago
                     </time></p>
                 </span>
            </span>
@@ -87,7 +104,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        8 days ago
+                        4 months ago
                     </time></p>
                 </span>
            </span>
@@ -104,7 +121,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        8 days ago
+                        4 months ago
                     </time></p>
                 </span>
            </span>
@@ -121,24 +138,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        8 days ago
-                    </time></p>
-                </span>
-           </span>
-		</article>
-
-
-		<article class="article_digitus">
-
-            <span class="posttitle_digitus">
-                <h2><a href="using-fetch-api-with-angular-2/index.html" rel="bookmark">
-				    Using the Fetch API with Angular 2 Using Zones
-                    </a>
-                </h2>
-                <span class="tooltip_digitus">
-                    <p><i class="fa fa-calendar"></i>
-                    <time>
-                        7 months ago
+                        4 months ago
                     </time></p>
                 </span>
            </span>
