fix syntax highlighting

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <span class="tooltip_digitus">
                     <p><i class="fa fa-calendar"></i>
                     <time>
-                        a few seconds ago
+                        7 minutes ago
                     </time></p>
                 </span>
            </span>
